[gd_scene load_steps=2 format=3 uid="uid://c3hh4gk1pokgv"]

[ext_resource type="Script" uid="uid://c63xtsi8okpld" path="res://components/computers_view/config_os/metadata_view.gd" id="1_lumtp"]

[node name="MetadataView" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lumtp")
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Public IP"

[node name="PublicIpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Local IP"

[node name="LocalIpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Original Public IP"

[node name="OrigPublicIpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "PC Name"

[node name="PcNameLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Router Password"

[node name="RouterPasswordLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Last Reboot"

[node name="LastRebootLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Active Net Card"

[node name="ActiveNetCardLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PortsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/PortsContainer"]
layout_mode = 2
text = "Ports"

[node name="PortsTree" type="Tree" parent="HBoxContainer/VBoxContainer/PortsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="FlagsContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Label" type="Label" parent="HBoxContainer/FlagsContainer"]
layout_mode = 2
text = "Flags"

[node name="IsHomeNetworkCheckBox" type="CheckBox" parent="HBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Home Network"

[node name="IsRentedCheckBox" type="CheckBox" parent="HBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Is Rented"

[node name="SavedCheckBox" type="CheckBox" parent="HBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Saved"

[node name="OverrideSettingsCheckBox" type="CheckBox" parent="HBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Override Settings"

[node name="OverrideUsedCheckBox" type="CheckBox" parent="HBoxContainer/FlagsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Override Used"
